WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.5.? (2019-0?-??)
------------------
Features:
- ALL: Better logging on status change, new status and set of statuses on which
  to send are now also logged when the invoice has been sent (was only when it
  was not sent).

5.5.2 (2019-01-23)
------------------
Features:
- WC: Added actions to the 'invoice status overview' meta box on the edit order
  screen.
- WC: Added support for the 'Custom Order Numbers for WooCommerce' plugin.
- ALL: Verander de factuur in een concept als een regel een onbekend btw
  percentage bevat.
- ALL: To prevent recurring "404 - Error - Bad Request - Requested invoice for
  entry 123456 not found. - XGYBSN000", the data for a no longer existing
  Acumulus entry are deleted from the local database.

Bugs:
- ALL: For refunds, the "property source" 'order' referred to an Invoice\Source
  object instead of to the hosting webshops's order object/array. The property
  source 'orderSource' now no longer exists in WC.
  NOTE: This may have consequences for your field references (veldverwijzingen)
  in your advanced settings!
- ALL: Setting "Concept" was not used: plugin would make an invoice a concept on
  warnings regardless the value for this setting.

Refactorings:
- OC: Cache geo zones.
- WC: Use add_meta_boxes_{post_type} instead of add_meta_boxes action.
- ALL: Make field references handling more robust (though catchable fatal errors
  are still not caught).
- ALL: Form refactoring: do not add success/error message if none specified;
  added getSubmittedValue() method; added getType() method.
- ALL: FormRenderer: changed list of parameters into 1 $field parameter on most
  render methods; added addAjax() method to support ajax submissions.
- ALL: InvoiceManager: added send1() method; made send() protected.
- ALL: Removed a lot of code warnings.